--- a/Personal Website/css/style.css
+++ b/Personal Website/css/style.css
@@ -155,6 +155,8 @@ section {
     color: var(--text-color);
     margin-left: 4rem;
     transition: .3s;
+    border-bottom: #404850;
+    box-shadow: #c8c8c8;
 }
 
 .navbar a:hover,
@@ -820,4 +822,26 @@ body {
         font-size: 24px; /* Adjust this value as needed */
         align-items: center;
     }
+    
+
+/*project 1 css*/
+    .image-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .featured-image {
+        width: 50%;
+        height: auto; /* This ensures that the aspect ratio of the image is maintained */
+    }
+    
+    .blog-post {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: -100vh; /* Adjust this height as needed */
+    }
+    
     
