--- a/Personal Website/css/style.css
+++ b/Personal Website/css/style.css
@@ -231,12 +231,14 @@ span {
     color: var(--main-color);
     margin: 3rem 1.5rem 3rem 0;
     transition: .5s ease;
+    box-shadow: 0 0 5px 2px grey;
+
 }
 
 .social-media a:hover {
     background: var(--main-color);
     color: var(--second-bg-color);
-    box-shadow: 0 0 1rem var(--main-color);
+    box-shadow: 0 0 5px 2px grey;
 }
 
 .btn {
@@ -244,12 +246,13 @@ span {
     padding: 1rem 2.8rem;
     background: var(--main-color);
     border-radius: 4rem;
-    box-shadow: 0 0 1rem var(--main-color);
+    box-shadow: 0 0 5px 2px grey;
     font-size: 1.6rem;
     color: var(--second-bg-color);
     letter-spacing: .1rem;
     font-weight: 600;
     transition: .5s ease;
+    
 }
 
 .btn:hover {
